--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ mod_name=Winefox's Spellbooks
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0-SNAPSHOT
+mod_version=1.0.0-alpha.2
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -38,3 +38,13 @@ mod_group_id=net.magicterra
 mod_authors=Gardel
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=TouhouLittleMaid with Iron's Spells 'n Spellbooks
+
+accessories_version=1.1.0-beta.35+1.21.1
+patchouli_version=1.21-89-NEOFORGE-SNAPSHOT
+patchouli_version_range=[1.21,)
+irons_spells_version=1.21.1-3.14.0
+irons_spells_version_range=[1.21.1-3.13.0,)
+touhou_little_maid_version=1.3.6
+touhou_little_maid_version_range=[1.3.6,)
+geckolib_version=4.7.6
+curios_version=9.2.2
