--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ mod_name=Winefox's Spellbooks
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0.0-beta.1
+mod_version=1.0.0-beta.2
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -39,12 +39,18 @@ mod_authors=Gardel
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=TouhouLittleMaid with Iron's Spells 'n Spellbooks
 
-accessories_version=1.1.0-beta.35+1.21.1
+accessories_version=1.1.0-beta.35
+accessories_cclayer_version=9.3.1-beta.28
 patchouli_version=1.21-89-NEOFORGE-SNAPSHOT
 patchouli_version_range=[1.21,)
-irons_spells_version=1.21.1-3.14.0
+irons_spells_version=3.14.0
 irons_spells_version_range=[1.21.1-3.13.0,)
 touhou_little_maid_version=1.3.6
+tlm_curse_version=6657437
 touhou_little_maid_version_range=[1.3.6,)
 geckolib_version=4.7.6
-curios_version=9.2.2
+jade_version=15.0.5+neoforge
+ysm_version=2.4.1-neoforge
+appleskin_version=3.0.7+mc1.21
+playeranimator_version=2.0.1+1.21.1-forge
+jei_version=19.22.0.315-neoforge
