--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -25,7 +25,7 @@ license = "${mod_license}"
     # A URL for the "homepage" for this mod, displayed in the mod UI
     displayURL = "magicterra.net" #optional
     # A file name (in the root of the mod JAR) containing a logo for display
-    #logoFile="winefoxs_spellbooks.png" #optional
+    logoFile="icon.png"
     # A text field displayed in the mod UI
     #credits="" #optional
     # A text field displayed in the mod UI
