--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ mod_name=Winefox's Spellbooks
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0.0-beta.4
+mod_version=1.0.0-beta.5
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -49,7 +49,7 @@ tlm_curse_version=6988538-sources-6988547
 touhou_little_maid_version_range=[1.3.6,)
 geckolib_version=4.7.6
 jade_version=15.0.5+neoforge
-ysm_version=2.4.1-neoforge
+ysm_version=2.5.0-neoforge+mc1.21.1
 appleskin_version=3.0.7+mc1.21
 playeranimator_version=2.0.1+1.21.1-forge
-jei_version=19.22.0.315-neoforge
+jei_version=19.25.0.321-neoforge
