--- a/build.gradle
+++ b/build.gradle
@@ -169,7 +169,8 @@ dependencies {
     implementation("io.wispforest:accessories-neoforge:${accessories_version}+${minecraft_version}")
     implementation("vazkii.patchouli:Patchouli:${patchouli_version}")
     implementation("software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}")
-    implementation("maven.modrinth:accessories-cc-layer:${accessories_cclayer_version}")
+    implementation("maven.modrinth:accessories-compat-layer:${accessories_compat_layer_version}")
+    implementation("maven.modrinth:curios:${curios_version}")
     implementation("io.redspace:irons_spellbooks:${minecraft_version}-${irons_spells_version}") {
         exclude group: "top.theillusivec4.curios", module: "curios-neoforge"
     }
