--- a/gradle.properties
+++ b/gradle.properties
@@ -39,8 +39,9 @@ mod_authors=Gardel
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=TouhouLittleMaid with Iron's Spells 'n Spellbooks
 
-accessories_version=1.1.0-beta.35
-accessories_cclayer_version=9.3.1-beta.28
+accessories_version=1.1.0-beta.52
+accessories_compat_layer_version=0.1.10
+curios_version=9.5.1+1.21.1
 patchouli_version=1.21.1-93-NEOFORGE-SNAPSHOT
 patchouli_version_range=[1.21,)
 irons_spells_version=3.14.4
@@ -49,7 +50,7 @@ tlm_curse_version=6988538-sources-6988547
 touhou_little_maid_version_range=[1.3.6,)
 geckolib_version=4.7.6
 jade_version=15.0.5+neoforge
-ysm_version=2.5.0-neoforge+mc1.21.1
+ysm_version=2.5.1-neoforge+mc1.21.1
 appleskin_version=3.0.7+mc1.21
 playeranimator_version=2.0.1+1.21.1-forge
 jei_version=19.25.0.321-neoforge
