--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ minecraft_version=1.21.1
 # as they do not follow standard versioning conventions.
 minecraft_version_range=[1.21.1,1.22)
 # The Neo version must agree with the Minecraft version to get a valid artifact
-neo_version=21.1.200
+neo_version=21.1.205
 # The Neo version range can use any version of Neo as bounds
 neo_version_range=[21,)
 # The loader version range can only use the major version of FML as bounds
@@ -46,11 +46,11 @@ patchouli_version=1.21.1-93-NEOFORGE-SNAPSHOT
 patchouli_version_range=[1.21,)
 irons_spells_version=3.14.4
 irons_spells_version_range=[1.21.1-3.13.0,)
+ars_nouveau_version=5.10.6.1228
+ars_nouveau_version_range=[5.10.6,)
 tlm_curse_version=6988538-sources-6988547
 touhou_little_maid_version_range=[1.3.6,)
 geckolib_version=4.7.6
 jade_version=15.0.5+neoforge
-ysm_version=2.5.1-neoforge+mc1.21.1
 appleskin_version=3.0.7+mc1.21
 playeranimator_version=2.0.1+1.21.1-forge
-jei_version=19.25.0.321-neoforge
