--- a/gradle.properties
+++ b/gradle.properties
@@ -39,18 +39,44 @@ mod_authors=Gardel
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=TouhouLittleMaid with Iron's Spells 'n Spellbooks
 
-accessories_version=1.1.0-beta.52
-accessories_compat_layer_version=0.1.10
-curios_version=9.5.1+1.21.1
-patchouli_version=1.21.1-93-NEOFORGE-SNAPSHOT
-patchouli_version_range=[1.21,)
-irons_spells_version=3.14.4
+# \u6838\u5FC3\u6A21\u7EC4
+irons_spells_version=3.14.6
 irons_spells_version_range=[1.21.1-3.13.0,)
 ars_nouveau_version=5.10.6.1228
 ars_nouveau_version_range=[5.10.6,)
 tlm_curse_version=7198494
 touhou_little_maid_version_range=[1.4.2,)
+
+# \u5404\u79CD\u9644\u5C5E
+cataclysm_spellbooks_version=6925079
+magic_from_the_east_version=1.1.2
+aeromancy_additions_version=1.2.4
+hazen_n_stuff_version=7163343
+discerning_the_eldritch_version=7101554
+aces_spell_utils_version=7196103
+fires_ender_expansion_version=6932708
+atlas_additions_version=1.3
+enders_spells_and_stuff_requiem_version=7031036
+dreamless_spells_version=7003520
+majo_spell_enchantment_version=7047251
+snow_waifu_spell_version=6855148
+gtbcs_geomancy_plus_version=7041615
+gtbcs_spelllib_version=7041582
+
+# \u5404\u79CD\u524D\u7F6E
+patchouli_version=1.21.1-93-NEOFORGE-SNAPSHOT
+patchouli_version_range=[1.21,)
+curios_version=9.5.1+1.21.1
+accessories_version=1.1.0-beta.52
+accessories_compat_layer_version=0.1.10
 geckolib_version=4.7.6
-jade_version=15.0.5+neoforge
+jade_version=15.10.3+neoforge
 appleskin_version=3.0.7+mc1.21
 playeranimator_version=2.0.1+1.21.1-forge
+twilight_forest_curse_version=6472889
+l_enders_cataclysm_version=3.16
+azurelib_version=3.0.39-neoforge,1.21.1
+#azurelib_version=3.1.0-neoforge,1.21.1
+expandability_version=5428824
+mowzies_mobs_version=6700443
+lionfish_version=2.6
