--- a/gradle.properties
+++ b/gradle.properties
@@ -29,7 +29,7 @@ mod_name=Winefox's Spellbooks
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0.0-beta.7
+mod_version=1.0.0-beta.8-alpha.3
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -41,10 +41,10 @@ mod_description=TouhouLittleMaid with Iron's Spells 'n Spellbooks
 
 # \u6838\u5FC3\u6A21\u7EC4
 irons_spells_version=3.14.6
-irons_spells_version_range=[1.21.1-3.13.0,)
+irons_spells_version_range=[1.21.1-3.14.0,)
 ars_nouveau_version=5.10.6.1228
 ars_nouveau_version_range=[5.10.6,)
-tlm_curse_version=7198494
+tlm_curse_version=7198494-sources-7198497
 touhou_little_maid_version_range=[1.4.2,)
 
 # \u5404\u79CD\u9644\u5C5E
